--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,7 +240,7 @@ h3 {
       width: 400px;
       height: 400px;
   }
-  
+
   .contact-info div {
     width: 410px;
     display: inline-block;
@@ -252,4 +252,15 @@ h3 {
   .contact h3 {
       color:#fce138;
       font-size: 32px;
+  }
+
+  .contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+  }
+
+  .contact-info a {
+    color: #fce138;
   }
