--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,16 +191,14 @@ h3 {
 .step h3 {
     color: #024e76;
     font-size: 46px;
-    flex-grow: 1; 
-    flex-basis: 30%;
+    flex: 1 30%; 
 }
 
 .step-info {
+    flex: 2 70%; 
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    flex-grow: 2; 
-    flex-basis: 70%;
 }
 
 .step-text h4 {
@@ -213,39 +211,40 @@ h3 {
 .step-text p {
     color: #39a6b2;
     font-size: 23px;
-    flex-grow: 12;
+    flex: 12;
 }
 
 .step-img {
-    flex-grow: 1;
-    flex-basis: 12%;
+    flex: 1 12%;
     margin-right: 20px;
 }
 
-.step-img {
+.step-img img{
     max-width: 100%;
 }
 
 .trainers {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
+    margin: 20px;
     background: #024e76;
     color: #fce138;
-    overflow: auto;
+    flex: 1;
 }
 
 .trainer img {
-    width: 35%;
-    float: left;
+    width: 100%;
 }
 
 .trainer-bio {
-    padding: 35px;
-    float: left;
-    width: 65%;
+    padding: 25px;
+    line-height: 1.3;
   }
 
   .text-left {
@@ -257,19 +256,17 @@ h3 {
   }
 
   .trainer-bio h3 {
-      font-size: 32px;
-      margin-bottom: 8px;
+      font-size: 28px;
   }
 
   .trainer-bio h4 {
       font-weight: lighter;
-      font-size: 26px;
-      margin-bottom: 25px;
+      font-size: 22px;
+      margin-bottom: 15px;
   }
 
   .trainer-bio p {
       font-size: 17px;
-      line-height: 1.3;
   }
 
   .contact {
