--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     font-family: Helvetica, Arial, san-serif; 
 }
 
-/* apply syles to <header> */
+/* HEADER / NAV BAR STYLES START */
 header {
     padding: 20px 35px;
     background-color: #39a6b2;
@@ -49,6 +49,11 @@ header nav ul li a {
     font-size: 1.55vw;
 }
 
+/* HEADER / NAVBAR STYLES END */
+
+
+
+/* FOOTER STYLES START */
 footer {
     background: #fce138;
     width: 100%;
@@ -73,16 +78,21 @@ footer a {
     color: #024e76
 }
 
+/* END FOOTER STYLES */
+
+/* STYLE ALL SECTION TAGS */
 section {
     padding: 60px;
 }
 
+/* HERO STYLES START */
 .hero {
     background-image: url("../images/hero-bg.jpg");
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position:relative
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 
 .hero-cta {
@@ -104,16 +114,12 @@ section {
     border: solid 3px #024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 500px;
     color: #024e76;
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
     width: 40%;
     margin: 3.5%;
 }
 
-h3 {
+.hero-form h3 {
     font-size: 24px;
     margin: 0;
 }
@@ -144,21 +150,10 @@ h3 {
     font-size: 16px
 }
 
-
-.intro p {
-    line-height: 1.7;
-    color: #39a6b2;
-    width: 80%;
-    font-size: 20px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.steps {
-    background: #fce138
-}
+/* HERO STYLES END */
 
 
+/* SECTION TITLE STYLES START */
 .section-title {
     font-size: 55px;
     color: #024e76;
@@ -176,6 +171,23 @@ h3 {
 .secondary-border {
     border-color:#39a6b2;
 }
+/* SECTION TITLE STYLES END */
+
+/* WHAT WE DO STYLES */
+.intro p {
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    font-size: 20px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+/* WHAT YOU DO STYLES START */
+.steps {
+    background: #fce138
+}
+
 
 .step {
     margin: 50px auto;
@@ -207,11 +219,13 @@ h3 {
     color: #024e76;
   }
 
+.step-text {
+    flex: 12;
+}
 
 .step-text p {
     color: #39a6b2;
-    font-size: 23px;
-    flex: 12;
+    font-size: 18px;
 }
 
 .step-img {
@@ -222,6 +236,9 @@ h3 {
 .step-img img{
     max-width: 100%;
 }
+/* WHAT YOU DO STYLES END */
+
+/* MEET THE TRAINERS START */
 
 .trainers {
     width: 100%;
@@ -245,127 +262,134 @@ h3 {
 .trainer-bio {
     padding: 25px;
     line-height: 1.3;
-  }
+}
 
-  .text-left {
-      text-align: left;
-  }
 
-  .text-right {
-      text-align: right;
-  }
+.trainer-bio h3 {
+    font-size: 28px;
+}
 
-  .trainer-bio h3 {
-      font-size: 28px;
-  }
+.trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 22px;
+    margin-bottom: 15px;
+}
 
-  .trainer-bio h4 {
-      font-weight: lighter;
-      font-size: 22px;
-      margin-bottom: 15px;
-  }
+.trainer-bio p {
+    font-size: 17px;
+}
 
-  .trainer-bio p {
-      font-size: 17px;
-  }
+/* TRAINER STYLES END */
 
-  .contact {
-      background-color: #024e76;
-  }
+/* REACH OUT STYLES START */
+.contact {
+    background-color: #024e76;
+}
 
-  .contact h2 {
-      color: #fce138;
-  }
-  .contact-info > * {
+.contact h2 {
+    color: #fce138;
+}
+.contact-info > * {
     flex: 1;
     margin: 15px;
-  }
-  .contact-info {
-      display:flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-  }
+}
+.contact-info {
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
 
-  .contact-info iframe {
-      height: 400px;
-  }
+.contact-info iframe {
+    height: 400px;
+}
 
-  .contact-info div {
+.contact-info div {
     color: white;
-  }
-  .contact h3 {
-      color:#fce138;
-      font-size: 32px;
-  }
+}
 
-  .contact-info p, .contact-info address {
+.contact h3 {
+    color:#fce138;
+    font-size: 32px;
+}
+
+.contact-info p, .contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 16px;
     font-style: normal;
-  }
+}
 
-  .contact-info a {
+.contact-info a {
     color: #fce138;
-  }
+}
 
-  .contact-form input, .contact-form textarea {
-      border: 1px solid #024e76;
-      display: block;
-      padding: 7px 15px;
-      font-size: 16px;
-      color: #024e76;
-      width: 100%;
-      margin-bottom: 15px;
-      margin-top: 5px;
-  }
+.contact-form input, .contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+}
 
-  .contact-form button {
-      width: 100%;
-      border: none;
-      background: #fce138;
-      color: #024e76;
-      text-align: center;
-      padding: 15px 0;
-      font-size: 16px;
-  }
+.contact-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
+}
 
-  .page-title {
-      color: #fce138;
-      display: inline-block;
-      border-bottom: 4px solid; 
-      padding: 0 80px 15px 80px;
-      font-weight: normal;
-      font-size: 42px;
-      font-style: italic;
-  }
+/* UTILITIES */
+.text-left {
+    text-align: left;
+}
+  
+.text-right {
+    text-align: right;
+}
 
-  .secondary-content {
-      width: 80%;
-      margin: 0 auto;
-      color: #024e76
-  }
 
-  .secondary-content h3 {
-      font-size: 25px;
-      margin: 20px 0;
-  }
+.page-title {
+    color: #fce138;
+    display: inline-block;
+    border-bottom: 4px solid; 
+    padding: 0 80px 15px 80px;
+    font-weight: normal;
+    font-size: 42px;
+    font-style: italic;
+}
 
-  .secondary-content p {
-      font-size: 16px;
-      line-height: 1.5;
-      margin: 20px 0;
-  }
+.secondary-content {
+    width: 80%;
+    margin: 0 auto;
+    color: #024e76
+}
 
-  .secondary-content ul {
-      margin: 15px 20px;
-  }
+.secondary-content h3 {
+    font-size: 25px;
+    margin: 20px 0;
+}
 
-  .secondary-content li {
-      color:#39a6b2;
-      margin: 10px 0px;
-  }
+.secondary-content p {
+    font-size: 16px;
+    line-height: 1.5;
+    margin: 20px 0;
+}
 
-  .flex-row {
-      display: flex;
-  }
+.secondary-content ul {
+    margin: 15px 20px;
+}
+
+.secondary-content li {
+    color:#39a6b2;
+    margin: 10px 0px;
+}
+
+.flex-row {
+    display: flex;
+}
